--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -11,7 +11,8 @@
 }
 
 .navbar {
-    padding: 1% 5%;
+    padding-left: 5%;
+    padding-right: 5%;
     background-color: #F2F2F2;
     background-color: #fff; 
     border-bottom: 1px;
