--- a/src/components/NavBar/NavBar.module.css
+++ b/src/components/NavBar/NavBar.module.css
@@ -105,6 +105,7 @@
 
 .titleDropdown {
     margin-top: 8px !important;
+    margin-bottom: 8px !important;
 }
 
 @media only screen and (min-width: 992px) {
@@ -120,6 +121,7 @@
 
     .titleDropdown {
         margin-top: 0 !important;
+        margin-bottom: 0 !important;
         padding-top: 3.5px !important;
         padding-bottom: 3.5px !important;
     }
