if not community dogs or members found do not keep loading

--- a/src/components/Community/Community.module.css
+++ b/src/components/Community/Community.module.css
@@ -39,3 +39,18 @@
     justify-content: space-around;
 }
   
+.emptyVectorContainer {
+    width: 100%;
+}
+
+.emptyVector {
+    height: 100px;
+    width: 100px;
+}
+
+.noCommunityMembers {
+    font-size: 1.5rem;
+    font-weight: 400;
+    width: 100%;
+    margin: 16px 0 0 0;
+}
