--- a/src/components/Community/Community.module.css
+++ b/src/components/Community/Community.module.css
@@ -49,8 +49,7 @@
 }
 
 .noCommunityMembers {
-    font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 600;
     width: 100%;
-    margin: 16px 0 0 0;
+    margin: 16px 0 0 0 !important;
 }
