--- a/src/components/CommunityDogs/CommunityDogs.module.css
+++ b/src/components/CommunityDogs/CommunityDogs.module.css
@@ -31,8 +31,7 @@
 }
 
 .noCommunityDogs {
-    font-size: 1.5rem;
-    font-weight: 400;
+    font-weight: 600;
     width: 100%;
-    margin: 16px 0 0 0;
+    margin: 16px 0 0 0 !important;
 }
